opencpu_demo_virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: opencpu-demo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
         - prefix: /ocpu
        routeAction:
          single:
            upstream:
              name: default-opencpu-demo-8004
              namespace: gloo-system
