test-petstore.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: test-petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'foo'
    routes:
      - matchers:
         - prefix: /api
        routeAction:
          single:
            upstream:
              name: default-petstore-8080
              namespace: gloo-system
